--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -149,6 +149,13 @@ html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fiel
   position: absolute;
 }
 
+.gradient{
+  @include border-radius(6px);
+  @include background(linear-gradient(top, #ffffff, #f0f0f0));
+  border: 1px solid #c1c1c1;
+  border-bottom-width: 2px;
+}
+
 a, a:visited, a:link {
   &:not(.not-blue){
     color: $link-color;
