--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -61,10 +61,7 @@
             Revision: @Chalkable.Web.Tools.CompilerHelper.Version
         </div>
 
-        <div id="logout-block">
-            <div class ="logout-area">@ViewData["FullName"]</div><span class ="logout-area" id="logout-arrow"></span>
-            @Html.ActionLink("log out", "LogOut", "Home", null, new Dictionary<string, object> { { "class", "logout" } })
-        </div>
+        <div id="logout-block"></div>
    
 
         @{
