--- a/Chalkable.Web/assets/jade/activities/apps/AppInfo.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppInfo.jade
@@ -122,7 +122,7 @@ each item in actAppPermissions
         .section
             .elem
                 label.hint Pricing:
-                +SlideCheckbox("price", "true")
+                +SlideCheckbox("price", true)
         .section
             .elem
                 label.hint Icons:
