added app deletion

--- a/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
@@ -6,7 +6,7 @@
         .row
             +ActionLink('account', 'profile', self.developerId.valueOf()) Profile
         .row
-            +ActionLink('account', 'resetPassword') Delete application
+            +ActionLink('apps', 'delete', self.currentAppId.valueOf()) Delete application
 
 
 
