fixed teacher setup

--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -8,7 +8,7 @@
         .buttons-row
             +ActionLink('calendar', 'month').one-third-button.calendar(title="View Calendar") Calendar
             +ActionLink('messages', 'list').one-third-button.messages(title="View Messages") Messages
-            +ActionLink('people', 'list').one-third-button.people(title="View People") People
+            +ActionLink('students', 'all').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('district', 'list').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('apps', 'list').one-third-button.apps(title="View Apps") Apps
