--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -102,6 +102,7 @@
         }
         <div id = "chlk-overlay" class ="x-hidden"></div>
         <div id="chlk-pop-up-container" class="x-hidden"><div id="pop-up-triangle"></div></div>
+        <div class="chlk-tooltip" id="chlk-tooltip-item"><div class="tooltip-content"></div><div class="tooltip-triangle"></div></div>
         @RenderSection("MixPanelTracking", false)
     </body>
     
