--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -1,5 +1,5 @@
 mixin SlideCheckbox(name, val)
-    .slide-checkbox
+    .slide-checkbox(attributes)
         .wrapper
             +Checkbox(name, val)
             label(for=name)
