--- a/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_action-bar.scss
@@ -9,13 +9,19 @@ DIV#content-wrapper{
       &.buttons{
         .container{
           .action-link, .action-button{
-            &:hover, &.pressed{
-              color: #957633;
-              @include background(linear-gradient(top, #f3eedf, #e1d3a6));
+            &:not(.disabled){
+              &:hover, &.pressed{
+                color: #957633;
+                @include background(linear-gradient(top, #f3eedf, #e1d3a6));
+              }
             }
 
             &.settings:hover{
               @include background(url(images/common/settings-bar-icon.png) 5px 9px no-repeat, linear-gradient(top, #f3eedf, #e1d3a6));
+            }
+
+            &.disabled, &[disabled]{
+              opacity: 0.6;
             }
           }
         }
