--- a/Chalkable.Web/assets/jade/common/InfoMsg.jade
+++ b/Chalkable.Web/assets/jade/common/InfoMsg.jade
@@ -1,11 +1,11 @@
-.dialog.info-msg.gray.center
+div(class=(self.getClazz() || "")).dialog.info-msg.gray
     if(self.getHeader())
-        h=self.getHeader()
-    p=self.getText()
-    .buttons-container
+        h1=self.getHeader()
+    pre=self.getText()
+    .buttons-container.center
         each button in self.getButtons()
             -attrs = button.getAttributes() || {};
-            -attrs.clazz = (attrs.clazz || '') + ' ' + (button.getColor().valueOf() || 'blue') + (button.isClose() ? ' close' : '');
+            -attrs.clazz = (attrs.clazz || '') + ' ' + (button.getColor() ? button.getColor().valueOf() : 'blue') + (button.isClose() ? ' close' : '');
             if(button.getController())
                 +ActionLink(button.getController(), button.getAction(), button.getParams() || []).button
                     +Button()(id=attrs.id, class=attrs.clazz).special-button2=button.getText()
