--- a/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
@@ -76,9 +76,15 @@
         font-size: 16px;
         min-width: 300px;
 
-        P{
+        h1{
+          font-size: 24px;
+          color: #6F6F6F;
+        }
+
+        PRE{
           margin: 20px 0;
           min-height: 1px;
+          font-family: Arial;
         }
 
         .buttons-container{
