fixed grade level saving

--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -1,7 +1,9 @@
 mixin SlideCheckbox(name, val)
     .slide-checkbox(attributes)
         .wrapper
-            +Checkbox(name, val)
+            +Hidden(name, false)
+            -attributes.checked = val
+            input(id=name, name = name, type="checkbox")(attributes)
             label(for=name)
 
 
