--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -12,7 +12,7 @@
         .buttons-row
             +ActionLink('district', 'list').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('apps', 'list').one-third-button.apps(title="View Apps") Apps
-            +ActionLink('settings', 'dashboard').one-third-button.settings(title="View Settings") Settings
+            +ActionLink('settings', 'dashboardTeacher').one-third-button.settings(title="View Settings") Settings
         .buttons-row
             +ActionLink('attendance', 'list').one-third-button.statistic(title="View Attendance") Attendance
             +ActionLink('discipline', 'list').one-third-button.discipline(title="View Discipline") Discipline
