--- a/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/ChangePassword.jade
@@ -2,11 +2,11 @@
     +ActionForm('account', 'doChangePassword')#info-edit-form.with-ok
         .title
             .name-block
-
+                .info-title=Msg.Old_Password
                 input(name="oldPassword", class="validate[required]")
-
+                .info-title=Msg.New_Password
                 input(name="newPassword", class="validate[required]")
-
+                .info-title=Msg.New_Password_Confirm
                 input(name="newPasswordConfirmation", class="validate[required]")
         .section-buttons
             +Button(type="submit").special-button.blue-button#submit-info-button=Msg.Save
