updated Students list page

--- a/Chalkable.Web/assets/jade/activities/school/SchoolPeople.jade
+++ b/Chalkable.Web/assets/jade/activities/school/SchoolPeople.jade
@@ -33,5 +33,4 @@
                             +Select('gradeLevelId')#gradeLevelId
                                 each item in gradeLevels
                                     +Option(item.getId(), item.getName())
-                .people-list-container.not-transparent
-                    +RenderWith(self.getUsersPart(), chlk.templates.school.SchoolPeoplePart)
+                +RenderWith(self.getUsersPart(), chlk.templates.people.UsersList)
