--- a/Chalkable.Web/assets/jade/activities/class/TopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/class/TopBar.jade
@@ -1,12 +1,17 @@
-BUTTON(
-    classId=self.getId(),
-    index=self.getIndex(),
-    class=self.isPressed() ? "pressed " : "",
-    type=self.isDisabled() ? "button" : "submit",
-    name="submitType",
-    value="save"
-).item.class-button.validate-skip
-    .img-wrapper
-        img(href="http://local.chalkable.com:8080/chalkable/Course/GetIcon?courseInfoId=10")
-    SPAN.text-container= self.getName()
-
+if self.getController()
+    A(class=self.isPressed() ? "pressed " : "",href="#"+self.getController()+'/'+self.getAction() + '/' + self.getId()).item.class-button.button-link
+        .img-wrapper
+            img(href="http://local.chalkable.com:8080/chalkable/Course/GetIcon?courseInfoId=10")
+        SPAN.text-container= self.getName()
+else
+    BUTTON(
+        classId=self.getId(),
+        index=self.getIndex(),
+        class=self.isPressed() ? "pressed " : "",
+        type=self.isDisabled() ? "button" : "submit",
+        name="submitType",
+        value="save"
+    ).item.class-button.validate-skip
+        .img-wrapper
+            img(href="http://local.chalkable.com:8080/chalkable/Course/GetIcon?courseInfoId=10")
+        SPAN.text-container= self.getName()
