--- a/Chalkable.Web/assets/jade/common/InfoMsg.jade
+++ b/Chalkable.Web/assets/jade/common/InfoMsg.jade
@@ -5,9 +5,9 @@ div(class=(self.getClazz() || "")).dialog.info-msg.gray
     .buttons-container.center
         each button in self.getButtons()
             -attrs = button.getAttributes() || {};
-            -attrs.clazz = (attrs.clazz || '') + ' ' + (button.getColor() ? button.getColor().valueOf() : 'blue') + (button.isClose() ? ' close' : '');
+            -attrs.clazz = (attrs.clazz || '') + ' ' + (button.getColor() ? button.getColor().valueOf() : 'blue');
             if(button.getController())
-                +ActionLink(button.getController(), button.getAction(), button.getParams() || []).button
+                +ActionLink(button.getController(), button.getAction(), button.getParams() || []).button.defer
                     +Button()(id=attrs.id, class=attrs.clazz).special-button2=button.getText()
             else
                 +Button()(id=attrs.id, class=attrs.clazz).special-button2.button=button.getText()
